shop.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop-deploy
  namespace: aws0418
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shop
  template:
    metadata:
      labels:
        app: shop
    spec:
      imagePullSecrets:
        - name: page-pull-secret
      containers:
        - name: shop
          image: hub.aws9.pri/page/shop:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: shop-svc
  namespace: aws0418
spec:
  type: ClusterIP
  selector:
    app: shop
  ports:
    - port: 80
      targetPort: 80
