ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: page-ingress
  namespace: aws0418
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: www.aws9.pri
      http:
        paths:
          - path: /main
            pathType: Prefix
            backend:
              service:
                name: main-svc
                port:
                  number: 80
          - path: /blog
            pathType: Prefix
            backend:
              service:
                name: blog-svc
                port:
                  number: 80
          - path: /shop
            pathType: Prefix
            backend:
              service:
                name: shop-svc
                port:
                  number: 80
          - path: /news
            pathType: Prefix
            backend:
              service:
                name: news-svc
                port:
                  number: 80
